--- a/CSS/components/footer.css
+++ b/CSS/components/footer.css
@@ -1,5 +1,8 @@
-.footer {
+.footer_container {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 400px;
     background-color: black;
