--- a/CSS/components/footer.css
+++ b/CSS/components/footer.css
@@ -64,14 +64,17 @@
 }
 
 .contact-and-impressum {
-    margin-top: auto;
-    list-style: none; 
     display: flex;
     flex-direction: column; 
+    justify-items: center;
+    list-style: none; 
+    margin-top: auto;
     padding-top: 90px; 
 }
 
 .contact_button {
+    width: 60px;
+    height: auto;
     text-align: left;
     font-size: 2rem;
     background-color: rgba(0, 0, 0, 0);
