--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -16,6 +16,27 @@
     flex-wrap: wrap;
 }
 
+#home_nav_bar {
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: white;
+    margin: 0px 20px 10px 20px;
+    padding: 0px 5px 10px 5px;
+    display: inline-block;
+    position: relative;
+    transition: color 0.3s;
+    overflow: hidden;
+}
+
+#home_nav_bar::after {
+    text-align: center;
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    background-color: white;
+}
+
 .logo-container {
     flex-grow: 1;
     margin-right: 1rem;
@@ -26,7 +47,7 @@
     padding-top: 90px;
 }
 
-.nav-link {
+.nav-link:not(#home_nav_bar) {
     font-size: 1.4rem;
     text-decoration: none;
     color: white;
@@ -59,4 +80,3 @@
     height: auto;
     margin-top: -3%;
 }
-
