--- a/CSS/components/footer.css
+++ b/CSS/components/footer.css
@@ -139,11 +139,8 @@
         flex-direction: column;
         align-items: center;
         padding: 0; 
+        padding-bottom: 2%;
         margin: 0; 
-    }
-
-    .facebook_button {
-        width: 80px;
     }
 
     .socials-and-impressum {
@@ -160,7 +157,8 @@
         text-align: center; 
         padding: 0; 
         margin: 0; 
-        margin-bottom: -15px;
+        margin-bottom: -30px;
+        margin-top: -20px;
     }
 
     .socials-and-impressum-container button {
@@ -194,7 +192,7 @@
     .footer_container {
         display: flex;
         flex-direction: row;
-        height: 400px;
+        width: 100%;
     }
     
     .icon-and-contact {
@@ -280,4 +278,8 @@
     .impressum_button{
         padding: 0;
     }
+}
+
+@media (max-width: 769px) and (max-width: 1186px) {
+    
 }
