--- a/CSS/components/footer.css
+++ b/CSS/components/footer.css
@@ -4,13 +4,14 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 400px;
+    height: 350px;
     background-color: black;
     color: white;
 }
 
 .icon-and-contact {
-    padding-left: 100px;
+    padding-left: 10%;
+    padding-top: 5%;
     width: 100%;
     height: 100%;
     position: relative;
@@ -31,16 +32,15 @@
 
 
 .logo-image-footer {
-    height: auto;
-    width: 40%;
-    margin-bottom: -40px;
+    height: 50%;
+    width: auto;
     padding-top: 0;
-    padding-left: 47px;
 }
 
 .footer_para_c1_line {
-    margin: 20px;
+    padding: 0;
     padding-bottom: 10px;
+    margin: 0;
 }
 
 .footer_para_c1_line::after {
@@ -52,8 +52,8 @@
 }
 
 .footer_p {
-    padding-left: 55px;
     width: 100%;
+    margin: 10px;
 }
 
 .footer_p a{
@@ -67,7 +67,8 @@
     align-items: center;
     height: 100%;
     width: 50%; 
-    padding-right: 100px; 
+    padding-right: 5%;
+    padding-top: 2.5%;
 }
 
 .socials-and-impressum {
@@ -87,6 +88,7 @@
     color: white;
     border: 0;
     padding-top: 5px;
+    padding-bottom: 7px;
 }
 
 .facebook_button:hover {
@@ -129,10 +131,16 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: 400px;
+        height: 450px;
+    }
+
+    .icon-and-contact-container:not(.footer_para_c1_line) {
+        height: 50%;
+        width: 100%;
+       
     }
     
-    .icon-and-contact, .footer_p, .footer_para_c1_line, .socials-and-impressum-container, .impressum_button {
+    .icon-and-contact, .footer_p, .footer_para_c1_line, .socials-and-impressum-container, .impressum_button, .kontakt_button {
         width: 100%; 
         text-align: center; 
         display: flex;
@@ -144,26 +152,28 @@
     }
 
     .socials-and-impressum {
+        height: 100%;
+        width: 100%;
         margin: 0;
         padding-left: 0;
         padding-top: 0;
         display: flex;
         align-items: center;
-        padding-bottom: 20px;
     }
 
     .footer .logo-image-footer {
-        width: 100%;
-        text-align: center; 
-        padding: 0; 
-        margin: 0; 
-        margin-bottom: -30px;
-        margin-top: -20px;
+        height: 80%;
     }
 
     .socials-and-impressum-container button {
         font-size: 1.5rem;
         font-weight: 300;;
+    }
+    
+    .facebook_button {
+        height: 50%;
+        width: 12%;
+        padding-bottom: 2%;
     }
 
     .footer_para_c1_line_contact_impressum {
@@ -181,7 +191,6 @@
 
     .socials-and-impressum-container {
         display: flex;
-        justify-content: center;
         align-items: center;
         flex-direction: column; 
         padding-right: 0;
@@ -192,7 +201,7 @@
     .footer_container {
         display: flex;
         flex-direction: row;
-        width: 100%;
+        height: 300px;
     }
     
     .icon-and-contact {
@@ -208,7 +217,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0; 
+        padding: 0;
+        padding-left: 10%; 
+        padding-top: 10%; 
         margin: 0; 
     }
 
@@ -267,8 +278,9 @@
         justify-content: end;
         align-items: end;
         flex-direction: column; 
-        padding-right: 0;
         width: 50%;
+        padding-right: 5%;
+        padding-top: 5%;
     }
 
     .kontakt_button {
@@ -281,5 +293,5 @@
 }
 
 @media (max-width: 769px) and (max-width: 1186px) {
-    
+
 }
