--- a/CSS/components/footer.css
+++ b/CSS/components/footer.css
@@ -81,7 +81,7 @@
 
 .facebook_button {
     width: 60px;
-    height: auto;
+    height: 60px;
     text-align: left;
     font-size: 2rem;
     background-color: rgba(0, 0, 0, 0);
