--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -150,6 +150,11 @@
 }
 
 @media (max-width: 499px) {
+    .block {
+        margin-top: -50px;
+        margin-bottom: 30px;
+    }
+
     .header_mein_coaching_header {
         font-size: 0.8rem;
         margin-top: 0;
